Re-addressing the overflow issue

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,8 @@
+html, body {
+	width: 100%;
+	overflow: hidden;
+}
+
 body {
 	background-color: rgb(167, 255, 137);
 	overflow: hidden;
